Amélioration du header "Connecté" + fix z-index featured

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -41,7 +41,7 @@ $content-width: 1145px;
     .home-header {
         border-bottom: solid 1px white;
         box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
-        padding-top: 50px;
+        padding-top: 40px;
         background: url("../images/home-background.png") repeat top center;
         margin-bottom: -170px;
         padding-bottom: 180px;
@@ -60,11 +60,13 @@ $content-width: 1145px;
 
         .home-description-button {
             display: inline-block;
-            line-height: 2.5rem;
+            line-height: 2rem;
+            font-size: 1.2rem;
+            font-size: 12px;
             color: white;
             text-decoration: none;
             border: solid 1px rgba(255, 255, 255, .5);
-            padding: 0 10px;
+            padding: 0 6px;
             margin-top: 5px;
 
             &:hover, &:focus {
@@ -79,12 +81,15 @@ $content-width: 1145px;
             padding: 0 10px;
 
             h2 {
-                padding: 0 0 5px 0;
-                margin: 0 0 10px 0;
+                margin: 0 0 5px 0;
                 border-bottom-color: white;
                 color: white;
                 font-weight: 300; // Light
             }
+        }
+
+        &:not(.connected) {
+            padding-bottom: 60px;
         }
 
         &.connected {
@@ -94,6 +99,7 @@ $content-width: 1145px;
             blockquote {
                 font-size: 2.5rem;
                 color: white;
+                font-weight: 300;
                 padding: 0;
                 margin: 0;
 
@@ -115,6 +121,10 @@ $content-width: 1145px;
                 margin-top: 5px;
                 text-align: center;
             }
+
+            .home-description-button {
+                margin-left: 15px;
+            }
         }
     }
 
@@ -131,6 +141,7 @@ $content-width: 1145px;
             position: relative;
             overflow: hidden;
             max-width: 228px;
+            z-index: 0;
 
             img {
                 position: relative;
@@ -194,7 +205,7 @@ $content-width: 1145px;
 
     .home-search-box {
         position: relative;
-        margin: 80px auto 0;
+        margin: 30px auto 0;
         max-width: 820px;
         background: white;
 
